fix: Add white space pre-wrap and width 100% to fix some issues with the chat box shortening the width

--- a/src/views/Lobby/Lobby.css
+++ b/src/views/Lobby/Lobby.css
@@ -180,10 +180,12 @@
 .lobby-chat-message-content-continuation {
   display: flex;
   align-items: center;
+  width: 100%;
 }
 
 .lobby-chat-message-text-continuation {
   padding-right: 5px;
+  white-space: pre-wrap;
 }
 
 .lobby-chat-message-user-timestamp-continuation {
